# http

./: Cargo.toml  README.md
http_1_0/: Cargo.toml
http_1_0/prototype/: Cargo.toml  request_example_0.txt
http_1_0/prototype/src/: http_version.rs  main.rs  method.rs  request.rs  uri.rs
http_1_0/prototype/src/request/: request_line.rs
http_1_0/prototype/src/uri/: authority.rs
http_1_0/src/: lib.rs  request.rs  response.rs  user_agent.rs
