[package]
name = "prototype"
version = "0.1.0"
authors = ["megumish <megumish@exploitouri.st>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version ="0.2.22", features = ["full"]}
log = "0.4.11"
env_logger = "0.7.1"